--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <nav class="menu-navigation">
               <ul class="menu-navigation-list">
                 <li class="menu-navigation-list-item"><a href="#IAM">Identity & Access Management</a></li>
-                <li class="menu-navigation-list-item"><a href="#Cybersecurity">Cybersecurity</a></li>
+                <li class="menu-navigation-list-item"><a href="#Security">Security</a></li>
                 <li class="menu-navigation-list-item"><a href="#android">Android</a></li>
                 <li class="menu-navigation-list-item"><a href="#javascript">JavaScript</a></li>
                 <li class="menu-navigation-list-item"><a href="#other">Other</a></li>
@@ -47,7 +47,7 @@
             </nav>         
 <!--IAM Section-->            
             <div id="IAM" class="menu-category">
-              <h3 class="menu-category-name"><u>Identity & Access Management</u></h3>
+              <h4 class="menu-category-name"><u>Identity & Access Management</u></h4>
               <ol class="menu-category-list has-images">
               <li class="menu-item">
                 <div class="menu-item-info">
@@ -132,8 +132,8 @@
               </ol>              
             </div>
 <!--Cyber Section-->            
-            <div id="Cybersecurity" class="menu-category">
-              <h3 class="menu-category-name">Cybersecurity</h3>
+            <div id="Security" class="menu-category">
+              <h4 class="menu-category-name">Security</h4>
               <ol class="menu-category-list has-images">
               <li class="menu-item">
                 <div class="menu-item-info">
@@ -145,11 +145,23 @@
                   <img src="/repo_images/vuls.jpg" />
                 </div>
               </li>
-              </ol>              
+              </ol>
+              <ol class="menu-category-list has-images">
+                <li class="menu-item">
+                  <div class="menu-item-info">
+                    <h4 class="menu-item-name">js-jose</h4>
+                    <span class="menu-item-price"><a href="https://github.com/square/js-jose" target="_blank">GitHub</a></span>
+                    <p class="menu-item-description">JavaScript library to encrypt/decrypt data in JSON Web Encryption (JWE) format and to sign/verify data in JSON Web Signature (JWS) format. Leverages Browser&#x27;s native WebCrypto API.</p>
+                  </div>
+                  <div class="menu-item-image has-meta-content">
+                    <img src="/repo_images/js-jose.jpg" />
+                  </div>
+                </li>
+                </ol>              
             </div>            
 <!--Android Section-->
             <div id="android" class="menu-category">
-              <h3 class="menu-category-name">Android</h3>
+              <h4 class="menu-category-name">Android</h4>
               <ol class="menu-category-list has-images">
               <li class="menu-item">
                 <div class="menu-item-info">
@@ -263,8 +275,9 @@
               </li>
               </ol>              
             </div>
+<!--Javascript Section--> 
             <div id="javascript" class="menu-category">
-              <h3 class="menu-category-name">JavaScript</h3>
+              <h4 class="menu-category-name">JavaScript</h4>
               <ol class="menu-category-list has-images">
               <li class="menu-item">
                 <div class="menu-item-info">
@@ -324,15 +337,6 @@
                 </div>
                 <div class="menu-item-image has-meta-content">
                   <img src="/repo_images/lgtm.jpg" />
-                </div>
-              </li>
-              </ol>
-              <ol class="menu-category-list">
-              <li class="menu-item">
-                <div class="menu-item-info">
-                  <h4 class="menu-item-name">js-jose</h4>
-                  <span class="menu-item-price"><a href="https://github.com/square/js-jose" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">JavaScript library to encrypt/decrypt data in JSON Web Encryption (JWE) format and to sign/verify data in JSON Web Signature (JWS) format. Leverages Browser&#x27;s native WebCrypto API.</p>
                 </div>
               </li>
               </ol>
