--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
               <img alt="Logo " src="/images/logo.png" />
             </div>
             <div class="profile-name">
-              <h1>Open Source Emporium</h1>
+              <h1>abrom.dev</h1>
             </div>
           </header>
           <aside class="profile-summary">
             <div class="summary-location summary-module">
-              <a href="https://github.com/gh0stface">github.com/gh0stface</a>
+              <a href="https://github.com/abrom44">github.com/abrom44</a>
             </div>
           </aside>
         </section>
@@ -340,7 +340,7 @@
               </ol>
             </div>
 
-            <a id="btn-view-full-menu" class="btn-view-full-menu" href="https://github.com/gh0stface?tab=repositories">View full list of gh0stface Repos</a>
+            <a id="btn-view-full-menu" class="btn-view-full-menu" href="https://github.com/abrom44?tab=repositories">View full list of abrom44 Repos</a>
           </article>
         </section>
       </div>
