--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   </head>
   <body>
     <div class="wrapper">
+      <div id="Top" class="menu-category"></div>
       <div class="profile">
         <section class="profile-masthead" id="masthead">
           <header class="profile-logo">
             <div class="profile-logo-image">
-              <img alt="Logo " src="/images/logo.png" />
             </div>
             <div class="profile-name">
               <h1>abrom.dev</h1>
+              <td style="text-align:right"><a class="github-button" href="https://github.com/abrom44" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true" aria-label="Follow @abrom44 on GitHub">Follow @abrom44</a>     <a class="github-button" href="https://github.com/abrom44/opendocs.xyz/discussions" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-comment-discussion" data-size="large" aria-label="Discuss abrom44/opendocs.xyz on GitHub">Discuss</a>     <a class="github-button" href="https://github.com/abrom44/opendocs.xyz/issues" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-issue-opened" data-size="large" data-show-count="true" aria-label="Issue abrom44/opendocs.xyz on GitHub">Issue</a></td>
             </div>
           </header>
           <aside class="profile-summary">
@@ -129,7 +130,8 @@
                   <img src="/repo_images/rails-auth.jpg" />
                 </div>
               </li>
-              </ol>              
+              </ol>
+              <li class="menu-navigation-list-item"><a href="#Top">Back to top</a></li>              
             </div>
 <!--Cyber Section-->            
             <div id="Security" class="menu-category">
@@ -155,7 +157,8 @@
                     <img src="/repo_images/js-jose.jpg" />
                   </div>
                 </li>
-                </ol>              
+                </ol>
+                <li class="menu-navigation-list-item"><a href="#Top">Back to top</a></li>                  
             </div>            
 <!--Android Section-->
             <div id="android" class="menu-category">
@@ -271,7 +274,8 @@
                   <img src="/repo_images/wire.jpg" />
                 </div>
               </li>
-              </ol>              
+              </ol>
+              <li class="menu-navigation-list-item"><a href="#Top">Back to top</a></li>                  
             </div>
 <!--Javascript Section--> 
             <div id="javascript" class="menu-category">
@@ -338,6 +342,7 @@
                 </div>
               </li>
               </ol>
+              <li class="menu-navigation-list-item"><a href="#Top">Back to top</a></li>    
             </div>
 
             <a id="btn-view-full-menu" class="btn-view-full-menu" href="https://github.com/abrom44?tab=repositories">View full list of abrom44 Repos</a>
