--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             </div>
             <div class="profile-name">
               <h1>abrom.dev</h1>
-              <td style="text-align:right"><a class="github-button" href="https://github.com/abrom44" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true" aria-label="Follow @abrom44 on GitHub">Follow @abrom44</a>     <a class="github-button" href="https://github.com/abrom44/opendocs.xyz/discussions" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-comment-discussion" data-size="large" aria-label="Discuss abrom44/opendocs.xyz on GitHub">Discuss</a>     <a class="github-button" href="https://github.com/abrom44/opendocs.xyz/issues" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-issue-opened" data-size="large" data-show-count="true" aria-label="Issue abrom44/opendocs.xyz on GitHub">Issue</a></td>
+             <!-- <td style="text-align:right"><a class="github-button" href="https://github.com/abrom44" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true" aria-label="Follow @abrom44 on GitHub">Follow @abrom44</a>     <a class="github-button" href="https://github.com/abrom44/opendocs.xyz/discussions" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-comment-discussion" data-size="large" aria-label="Discuss abrom44/opendocs.xyz on GitHub">Discuss</a>     <a class="github-button" href="https://github.com/abrom44/opendocs.xyz/issues" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-issue-opened" data-size="large" data-show-count="true" aria-label="Issue abrom44/opendocs.xyz on GitHub">Issue</a></td> --> 
             </div>
           </header>
           <aside class="profile-summary">
             <div class="summary-location summary-module">
-              <a href="https://github.com/abrom44">github.com/abrom44</a>
+              <a class="github-button" href="https://github.com/abrom44" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true" aria-label="Follow @abrom44 on GitHub">Follow @abrom44</a>     <a class="github-button" href="https://github.com/abrom44/abrom.dev/discussions" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-comment-discussion" data-size="large" aria-label="Discuss abrom44/opendocs.xyz on GitHub">Discuss</a>
             </div>
           </aside>
         </section>
