--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div id="Top" class="menu-category"></div>
       <table style="width:100%">
         <tr>
-          <td><h1>Open Docs Catalog</h1></td>
+          <td><h1>abrom.dev</h1></td>
           <td style="text-align:right"><a class="github-button" href="https://github.com/abrom44" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true">Follow @abrom44</a>     <a class="github-button" href="https://github.com/abrom44/abrom.dev/discussions" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-comment-discussion" data-size="large">Discuss</a></td>
         </tr>
       </table>
