--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="Top" class="menu-category"></div>
-      <table style="width:100%">
-        <tr>
-          <td><h1>abrom.dev</h1></td>
-          <td style="text-align:right"><a class="github-button" href="https://github.com/abrom44" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true">Follow @abrom44</a>     <a class="github-button" href="https://github.com/abrom44/abrom.dev/discussions" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-comment-discussion" data-size="large">Discuss</a></td>
-        </tr>
-      </table>
-    </div>
+      <div class="profile">
+        <section class="profile-masthead" id="masthead">
+          <header class="profile-logo">
+            <div class="profile-logo-image">
+              <img alt="Logo " src="/images/logo.png" />
+            </div>
+            <div class="profile-name">
+              <h1>abrom.dev</h1>
+            </div>
+          </header>
+          <aside class="profile-summary">
+            <div class="summary-location summary-module">
+              <a href="https://github.com/abrom44">github.com/abrom44</a>
+            </div>
+          </aside>
+        </section>
+
         <section class="profile-content" id="content">
 
           <div class="profile-description">
@@ -120,8 +129,7 @@
                   <img src="/repo_images/rails-auth.jpg" />
                 </div>
               </li>
-              </ol>
-              <li class="menu-navigation-list-item"><a href="#Top">Back to top</a></li>              
+              </ol>              
             </div>
 <!--Cyber Section-->            
             <div id="Security" class="menu-category">
@@ -147,8 +155,7 @@
                     <img src="/repo_images/js-jose.jpg" />
                   </div>
                 </li>
-                </ol>
-                <li class="menu-navigation-list-item"><a href="#Top">Back to top</a></li>                  
+                </ol>              
             </div>            
 <!--Android Section-->
             <div id="android" class="menu-category">
@@ -264,8 +271,7 @@
                   <img src="/repo_images/wire.jpg" />
                 </div>
               </li>
-              </ol>
-              <li class="menu-navigation-list-item"><a href="#Top">Back to top</a></li>                  
+              </ol>              
             </div>
 <!--Javascript Section--> 
             <div id="javascript" class="menu-category">
@@ -332,7 +338,6 @@
                 </div>
               </li>
               </ol>
-              <li class="menu-navigation-list-item"><a href="#Top">Back to top</a></li>    
             </div>
 
             <a id="btn-view-full-menu" class="btn-view-full-menu" href="https://github.com/abrom44?tab=repositories">View full list of abrom44 Repos</a>
