--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </header>
           <aside class="profile-summary">
             <div class="summary-location summary-module">
-              <a href="https://github.com/abrom44">github.com/abrom44</a>
+              <a class="github-button" href="https://github.com/abrom44" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true">Follow @abrom44</a>     <a class="github-button" href="https://github.com/abrom44/opendocs.xyz/discussions" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-comment-discussion" data-size="large">Discuss</a>
             </div>
           </aside>
         </section>
