--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div class="wrapper">
       <div class="profile">
+        <div id="TOC" class="menu-category"></div>
         <section class="profile-masthead" id="masthead">
           <header class="profile-logo">
             <div class="profile-logo-image">
@@ -24,7 +25,7 @@
           </header>
           <aside class="profile-summary">
             <div class="summary-location summary-module">
-              <a class="github-button" href="https://github.com/abrom44" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true">Follow @abrom44</a>     <a class="github-button" href="https://github.com/abrom44/opendocs.xyz/discussions" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-comment-discussion" data-size="large">Discuss</a>
+              <a class="github-button" href="https://github.com/abrom44" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="false">Follow @abrom44</a>     <a class="github-button" href="https://github.com/abrom44/abrom.dev/discussions" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-comment-discussion" data-size="large">Discuss</a>
             </div>
           </aside>
         </section>
@@ -35,16 +36,22 @@
             <p>Curated listing of open source projects that I find worth looking into. Enjoy!</p>
           </div>
 
-          <article class="profile-menu" id="menu">
-            <nav class="menu-navigation">
-              <ul class="menu-navigation-list">
-                <li class="menu-navigation-list-item"><a href="#IAM">Identity & Access Management</a></li>
-                <li class="menu-navigation-list-item"><a href="#Security">Security</a></li>
-                <li class="menu-navigation-list-item"><a href="#android">Android</a></li>
-                <li class="menu-navigation-list-item"><a href="#javascript">JavaScript</a></li>
-                <li class="menu-navigation-list-item"><a href="#other">Other</a></li>
-              </ul>
-            </nav>         
+            
+            <div id="TOC" class="menu-category">
+              <h3 class="menu-category-name"><u>Favorite Open Source Repos</u></h3>
+              <article class="profile-menu" id="menu">
+                <nav class="menu-navigation">
+                  <ul class="menu-navigation-list">
+                    <li class="menu-navigation-list-item"><a href="#IAM">Identity & Access Management</a></li>
+                    <li class="menu-navigation-list-item"><a href="#Security">Security</a></li>
+                    <li class="menu-navigation-list-item"><a href="#android">Android</a></li>
+                    <li class="menu-navigation-list-item"><a href="#javascript">JavaScript</a></li>
+                    <li class="menu-navigation-list-item"><a href="#other">Other</a></li>
+                  </ul>
+                </nav>
+              </article>
+            </div>
+            
 <!--IAM Section-->            
             <div id="IAM" class="menu-category">
               <h4 class="menu-category-name"><u>Identity & Access Management</u></h4>
